--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,12 +14,14 @@
       
      
     </ul>
-  
+   
     <button *ngIf="loginService.isAuthenticate==false"  routerLink="login"  class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-    <button (click)="logout()" *ngIf="loginService.isAuthenticate==true"  routerLink="login"   class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
-      <button  routerLink="register" *ngIf="loginService.isAuthenticate==false"  class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
-    
-  </div>
+    <!-- <li class="nav-item active" >
+    </li> -->
+    <a class="text-success m-2"> {{UserNName}}</a>
+      <button (click)="logout()" *ngIf="loginService.isAuthenticate==true"  routerLink="login"   class="btn btn-outline-success my-2 my-sm-0" type="submit" >LogOut</button>
+    <button  routerLink="register" *ngIf="loginService.isAuthenticate==false"  class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
+    </div>
 </nav>
 <div>
  
