--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,9 @@
     <button *ngIf="loginService.isAuthenticate==false"  routerLink="login"  class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
     <!-- <li class="nav-item active" >
     </li> -->
-    <a class="text-success m-2"> {{UserNName}}</a>
+    <a class="text-success m-2">
+       <!-- {{UserNName}} -->
+      </a>
       <button (click)="logout()" *ngIf="loginService.isAuthenticate==true"  routerLink="login"   class="btn btn-outline-success my-2 my-sm-0" type="submit" >LogOut</button>
     <button  routerLink="register" *ngIf="loginService.isAuthenticate==false"  class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
     </div>
